apps/observability/grafana-proxy/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: grafana-external-svc-1
  namespace: management
  labels:
    kubernetes.io/service-name: grafana-external-svc
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.102.3"
    conditions:
      ready: true
ports:
  - name: grafana-port
    port: 3000
    protocol: TCP
