apps/observability/grafana-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external-svc
  namespace: management
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-external-svc
  namespace: management
  annotations:
    argocd.argoproj.io/sync-options: Replace=true
subsets:
  - addresses:
      - ip: 192.168.102.3
    ports:
      - name: http
        port: 3000
