apps/observability/grafana-proxy/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-websecure
  namespace: monitoring
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`grafana.mvgates.com`)
      kind: Rule
      services:
        - name: grafana-external-ts
          kind: TraefikService
  tls:
    secretName: grafana-mvgates-tls
